# UnaOS

./: .gitignore  CREDITS.md  Cargo.toml  MEMORIA.md  README.md  UNA_MEMORIA.md  UnaOS_ls-aR.txt  VECTORS_DIRECTIVE.md  fix_bootstrap_signature.py  fix_bootstrap_signature_2.py  fix_bootstrap_signature_3.py  fix_bootstrap_signature_4.py  fix_bootstrap_signature_5.py  fix_build_gnome_ui.py  fix_build_gtk_ui.py  fix_build_gtk_ui_2.py  fix_gnome_ui.py  fix_gtk_spline.py  fix_outer_bootstrap.py  fix_outer_bootstrap_2.py  patch.diff  patch.rs  patch_bandy.py  patch_bandy2.py  patch_bandy3.py  patch_cargo.sh  patch_gnome.py  patch_gnome_spline.py  patch_gnome_spline_2.py  patch_lumen.py  patch_matrix.py  patch_nexus.py  patch_sidebar.py  patch_spline_clean.py  patch_spline_clean_2.py  patch_spline_final.py  patch_spline_qt.py  patch_vein_bridge.py  patch_workspace_mod.py  run_log.txt  (+4 more)
.cargo/: config.toml
apps/aether/: README.md
apps/amber_bytes/: README.md
apps/aulë/: Cargo.toml  README.md
apps/cli/sentinel/: Cargo.toml
apps/cli/sentinel/src/: main.rs
apps/cli/unafs/: Cargo.toml
apps/cli/unafs/src/: main.rs
apps/elessar/: Cargo.toml
apps/elessar/src/: main.rs
apps/elessar/src/splines/: ide.rs
apps/facet/: README.md
apps/geode/: README.md
apps/lumen/: Cargo.toml  README.md  layout.json
apps/lumen/src/: core.rs  cortex.rs  history.rs  main.rs
apps/lumen/src/ui/: chat_view.rs  input.rs  macos_view.rs  mod.rs  model.rs  telemetry.rs  view.rs
apps/matrix/: README.md
apps/midden/: README.md
apps/obsidian/: README.md
apps/principia/: README.md
apps/sentinel/: Cargo.toml
apps/sledge/: Cargo.toml
apps/stria/: Cargo.toml  README.md
apps/tabula/: README.md
apps/una/: Cargo.toml  README.md
apps/una/src/: main.rs
apps/vein/: Cargo.toml
apps/vein/src/: api.rs  check_config.rs  comms_spline.rs  forge.rs  main.rs  resources.gresource  resources.gresource.xml
apps/vug/: Cargo.toml  README.md
docs/: CODEX.md
docs/MANIFESTO/: AD_ASTRA_PER_ASPERA.md  CLEAN_ROOM_POLICY.md  ETHOS.md  GPL.md  LEGAL_STANCE.md  POST_SCARCITY.md  SELF_REPLICATION.md
docs/dev/: AXIOM_DIRECTIVE.md
docs/eggs/: KEY_FRAGMENT.nfo
docs/shard_notes/: J16-euclase-inception.md  J2_task_S16_S21.md  J30_mach_log.md  J5-Q5-tachyon-surge.md  j01.01-m01.01-apple-tree.md  j02.01-m02.01-apple-tree.md  j02.03-m02.03-apple-tree.md  j02.04-m02.04-apple-tree.md  j03.01-m03.01-apple-tree.md  j04.02-m04.02-apple-tree-purifier.md  j04.03-m04.03-apple-tree-matrix.md  j04.06-m04.06-phase1-splinter.md  j04.08-m04.08-optical-matrix-fix.md  j04.10-m04.10-yard-work.md  j04.12-m04.12-apple-tree.md  j04.13-m04.13-apple-bonzai.md  j04.14-m04.14-apple-tree.md  j05.01-m05.01-bandy-aid.md  j05.03-m05.03-appkit-physics.md  j06.01-m06.01-new-quartzite.md  j1-q1-qt-port.md  j10-q10-equinox-sync.md  j11-q11-gtk-idle-adjustment.md  j12-q12-state-priming.md  j13-q13-bubble-trace.md  j14-q14-synapse-broadcast.md  j15-q15-broadcast-wiring.md  j16-q16-chrono-routing.md  j17-q17-async-io-latency.md  j18-q18-ring-buffer-memory.md  j19-q19-adjustment-math-panic.md  j2-q2-le-mans.md  j20-q20-paged-storage.md  (+32 more)
handlers/amber_bytes/: Cargo.backup  Cargo.toml
handlers/amber_bytes/src/: lib.rs  main.rs
handlers/aule/: Cargo.toml  README.md
handlers/aule/src/: lib.rs
handlers/midden_legacy/: .gitignore  Cargo.toml  README.md
handlers/midden_legacy/src/: brain.rs
handlers/midden_legacy/src/modes/: advanced.rs  intermediate.rs  mod.rs
handlers/vaire/: Cargo.toml  README.md
handlers/vaire/src/: lib.rs
handlers/vein/: Cargo.toml  DIRECTIVES.md  README.md
handlers/vein/src/: context.rs  cortex.rs  gravity.rs  lib.rs  model.rs  storage.rs  synapse.rs  view.rs
libs/bandy/: Cargo.toml
libs/bandy/src/: lib.rs  ontology.rs  signals.rs  state.rs  synapse.rs  telemetry.rs
libs/elessar/: Cargo.toml  README.md
libs/elessar/src/: lib.rs
libs/elessar/src/context/: indexer.rs  mod.rs  skeleton.rs
libs/euclase/: Cargo.toml
libs/euclase/src/: cortex.rs  geom.rs  lib.rs  mat.rs  mat4.rs  quat.rs  ray.rs  utils.rs  vec.rs  vec3.rs  vec4.rs
libs/euclase/src/shaders/: vug_wireframe.wgsl
libs/euclase/tests/: geom_tests.rs  mat_tests.rs  quat_tests.rs  ray_tests.rs  vec_tests.rs
libs/gneiss_pal/: Cargo.toml  README.md  arroyo
libs/gneiss_pal/assets/: resources.gresource
libs/gneiss_pal/examples/: moonstone_check.rs
libs/gneiss_pal/gpo/core/: Cargo.toml
libs/gneiss_pal/gpo/core/src/: lib.rs
libs/gneiss_pal/gpo/mac/: Cargo.toml
libs/gneiss_pal/gpo/mac/src/: main.rs
libs/gneiss_pal/gpo/win/: Cargo.toml
libs/gneiss_pal/gpo/win/src/: main.rs
libs/gneiss_pal/gpo/x/gtk/: Cargo.toml
libs/gneiss_pal/gpo/x/gtk/src/: main.rs
libs/gneiss_pal/gpo/x/gtk_pvp/: Cargo.toml
libs/gneiss_pal/gpo/x/gtk_pvp/src/: main.rs
libs/gneiss_pal/gpo/x/qt/: .qmlls.ini  Cargo.toml  build.rs
libs/gneiss_pal/gpo/x/qt/src/: bridge.rs  main.rs
libs/gneiss_pal/src/: api.rs  app_handler.rs  backend.rs  forge.rs  from-nested-libs-host.rs  from-nested-libs-lib.rs  io.rs  lib.rs  main.rs  paths.rs  persistence.rs  shard.rs  text.rs  types.rs  utils.rs  window.rs
libs/gneiss_pal/src/api/: format.rs  mod.rs
libs/gneiss_pal/src/widgets/: mod.rs
libs/quartzite/: Cargo.toml  build.rs
libs/quartzite/assets/: resources.gresource.xml
libs/quartzite/macros/: Cargo.toml
libs/quartzite/macros/src/: ast.rs  lib.rs
libs/quartzite/src/: backend.rs  lib.rs  spline.rs  tetra.rs  text.rs
libs/quartzite/src/resources/: quartzite.gresource.xml
libs/quartzite/src/splines/: comms.rs  mod.rs
libs/quartzite/src/widgets/: mod.rs  model.rs  telemetry.rs  text.rs
unaos/: .gitignore  Cargo.toml  README.md  arroyo  aule.sh  launch.sh  sledge.sh  vaire.sh  x86_64-unknown-none.json
unaos/crates/kernel/: Cargo.toml
unaos/crates/kernel/.cargo/: config.toml
unaos/crates/kernel/src/: allocator.rs  console.rs  events.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  pal.rs  pci.rs  serial.rs  shell.rs  user.rs  vug.rs  writer.rs  xhci.rs
unaos/crates/kernel/src/xhci/: context.rs  event.rs  ring.rs  trb.rs
(+139 files in other folders)
