[workspace]
resolver = "2"
members = [
    "libs/gneiss_pal",
    "libs/quartzite",
    "libs/elessar",
    "handlers/vein",
    "handlers/matrix",
    "handlers/vaire",
    "handlers/aule",
    "handlers/tabula",
    "handlers/midden",
    "handlers/amber_bytes",
    "handlers/cli/vertex",
    "handlers/vug",
    "handlers/midden_legacy",
    "handlers/vairë_legacy",
    "apps/lumen",
    "apps/una"
]
