[workspace]
resolver = "2"
members = [
    "libs/gneiss_pal",
    "libs/quartzite",
    "libs/elessar",
    "libs/resonance",
    "libs/unafs",
    "libs/bandy",
    "handlers/vein",
    "handlers/matrix",
    "handlers/vaire",
    "handlers/aule",
    "handlers/tabula",
    "handlers/midden",
    "handlers/amber_bytes",
    "handlers/vug",
    "apps/cli/vertex",
    "apps/cli/unafs",
    "apps/lumen",
    "apps/una"
]
