[workspace]
resolver = "2"
members = [
    "libs/gneiss_pal",
    "libs/quartzite",
    "libs/elessar",
    "libs/resonance",
    "libs/unafs",
    "libs/bandy",
    "libs/euclase",
    "handlers/vein",
    "handlers/matrix",
    "handlers/vaire",
    "handlers/aule",
    "handlers/tabula",
    "handlers/midden",
    "handlers/amber_bytes",
    # "handlers/vug",
    "apps/cli/vertex",
    "apps/cli/unafs",
    "apps/cli/unafs_bench",
    "apps/cli/sentinel",
    "apps/lumen",
    "apps/una",
    "libs/lux"
]

# 🦅 MACH'S BRIDGE:
# By default, a bare `cargo build` will ONLY build our host-native tools and their dependencies.
# It will automatically target Mac (aarch64-apple-darwin).
default-members = [
    "apps/lumen",
    "apps/una",
    "apps/cli/vertex",
    "apps/cli/unafs",
    "apps/cli/unafs_bench",
    "apps/cli/sentinel"
]
