[package]
name = "elessar"
version = "0.1.0"
edition = "2021"

[features]
default = ["gtk"]
gtk = ["gneiss_pal/gtk"]
gnome = ["gneiss_pal/gnome"]

[dependencies]
gneiss_pal = { path = "../../libs/gneiss_pal" }
gtk4 = { version = "0.9.7", features = ["v4_12"] }
glib = "0.20"
libadwaita = { version = "0.7.2", features = ["v1_4"], optional = true }
sourceview5 = "0.9"
async-channel = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
dotenvy = "0.15"
tokio = { version = "1.36", features = ["full"] }
