[package]
name = "una"
version = "0.1.0"
edition = "2024"

[features]
default = []
gtk = ["quartzite/gtk"]
gnome = ["quartzite/gnome"]

[dependencies]
anyhow = "1.0"
gtk4 = { version = "0.10.3", features = ["v4_16", "v4_18"] }
glib = "0.21"
libadwaita = { version = "0.8.1", features = ["v1_4", "v1_5"] }

# The Trinity Core
quartzite = { path = "../../libs/quartzite", default-features = false }
gneiss_pal = { path = "../../libs/gneiss_pal" }
bandy = { path = "../../libs/bandy" }
elessar = { path = "../../libs/elessar" }

# Host UI & System
async-channel = "2.5"
tokio = { version = "1.49", features = ["sync", "rt", "rt-multi-thread", "macros"] }

# Handlers
matrix = { path = "../../handlers/matrix" }
tabula = { path = "../../handlers/tabula" }
# midden = { path = "../../handlers/midden" }
# vaire = { path = "../../handlers/vaire" }
# aule = { path = "../../handlers/aule" }
