[package]
name = "vein"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk4 = { version = "0.10", features = ["v4_12"] }
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
async-channel = "2.3"
dotenvy = "0.15"

[dependencies.gneiss_pal]
path = "../../libs/gneiss_pal"
