[package]
name = "vein"
version = "0.1.0"
edition = "2021"

[dependencies]
gneiss_pal = { path = "../../libs/gneiss_pal" }
reqwest = { version = "0.11", features = ["json", "stream"] } # Ensure "stream" is present
tokio = { version = "1.36", features = ["full"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ab_glyph = "0.2.32" # Keep if gneiss_pal or other parts use it
log = "0.4"
env_logger = "0.10"
