[package]
name = "amber_bytes"
version = "0.1.0"
edition = "2021"
authors = ["pmes"]
description = "Forensic data recovery and preservation tool"

[dependencies]
# SAFETY FIRST: 'memmap2' allows safe, OS-level memory mapping.
memmap2 = "0.9"

# THE INTERFACE: 'clap' for robust command-line parsing.
clap = { version = "4.4", features = ["derive"] }

# THE VISUALIZER: 'hex' ensures we see the raw truth.
hex = "0.4"

# NEW: For cryptographic proof (SHA-256)
sha2 = "0.10"

# NEW: For professional progress bars
indicatif = "0.17"

# NEW: The Hyper-Fast Searcher
memchr = "2.7"

# NEW: The Chaos Engine
rand = "0.8"
