[package]
name = "aule"
version = "0.1.0"
edition = "2024"
license = "LGPL-3.0-or-later"

[dependencies]
anyhow = "1.0"
bandy = { path = "../../libs/bandy" }
elessar = { path = "../../libs/elessar" }
gneiss_pal = { path = "../../libs/gneiss_pal" }
gtk4 = { version = "0.10.3", features = ["v4_12"] }
glib = "0.21"
async-channel = "2.5"
