[package]
name = "midden"
version = "0.1.0"
edition = "2021"
authors = ["pmes"]
description = "The Adaptive Shell: Local AI Safety & Git Co-Pilot"

[dependencies]
# The CLI Backbone
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
colored = "2.0" # For the "Advanced" Matrix mode

walkdir = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# The "Intermediate" TUI (Cyborg Mode)
ratatui = "0.26"
crossterm = "0.27"

# The "Beginner" GUI (Cockpit Mode) - Optional for now, but prepped
iced = { version = "0.12", features = ["tokio"] }

# The Brain (Local AI)
# candle-core = "0.3" # Uncomment when we pull in the Phi-3 model
# candle-nn = "0.3"
# tokenizers = "0.15"

[lib]
name = "midden_core"
path = "src/lib.rs"

[[bin]]
name = "midden"
path = "src/main.rs"
