# =====================================================================
# CRATE: handlers/vein/Cargo.toml
# DESCRIPTION: The AI Cortex. Routes UI features ONLY to Quartzite.
# =====================================================================

[package]
name = "vein"
version = "0.1.0"
edition = "2024"

[features]
# Default to no UI assumptions. Let the top-level app decide.
default = []

# If Vein needs UI awareness, it asks Quartzite (The Diplomat), NOT Elessar.
gtk = ["quartzite/gtk"]
gnome = ["quartzite/gnome"]

[dependencies]
# The Plexus Abstraction Layer
gneiss_pal = { path = "../../libs/gneiss_pal" }

# The Context Engine (Pure logic, no features requested!)
elessar = { path = "../../libs/elessar" }

# The Diplomat (Handles all UI bridging)
quartzite = { path = "../../libs/quartzite", optional = true }

# The Memory
unafs = { path = "../../libs/unafs" }
bandy = { path = "../../libs/bandy" }

# Core Logic & Serialization
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
fastrand = "2.3.0"
chrono = "0.4"
anyhow = "1.0.102"

# Async & Networking (The Fuel Injectors for LLM communication)
async-channel = "2.5"
tokio = { version = "1.49", features = ["full"] }
reqwest = { version = "0.13", features = ["json", "stream", "multipart"] }

# Host UI (Vein currently has native views, so it needs these directly for now)
gtk4 = "0.10.3"
glib = "0.21"
sourceview5 = "0.10.0"
libspelling = "0.4.0"