[package]
name = "vein"
version = "0.1.0"
edition = "2024"

# ==================================================================================
# THE VEIN HANDLER
# The AI Cortex. The Mind.
# Integrates LLM reasoning, Context Retrieval, and Semantic Memory.
# ==================================================================================

[features]
default = []
gtk = ["dep:gtk4", "sourceview5", "dep:libspelling"]
gnome = ["gtk", "dep:libadwaita"]

[dependencies]
# The Trinity
bandy = { path = "../../libs/bandy" }
gneiss_pal = { path = "../../libs/gneiss_pal" }
unafs = { path = "../../libs/unafs" }
elessar = { path = "../../libs/elessar" }
quartzite = { path = "../../libs/quartzite" }

# Async & Runtime
tokio = { version = "1.49", features = ["full"] }
# The universal nervous system. No UI dependencies allowed here.
async-channel = "2.5"
futures = "0.3"

# Networking & AI
reqwest = { version = "0.13.2", features = ["json", "multipart", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
log = "0.4"
chrono = "0.4"
anyhow = "1.0"
rand = "0.10"

# UI (Optional - The Diplomat Bridge)
gtk4 = { version = "0.10.3", optional = true }
libadwaita = { version = "0.8.1", features = ["v1_4"], optional = true }
sourceview5 = { version = "0.10", optional = true }
libspelling = { version = "0.4.1", optional = true }

[dev-dependencies]
# None (Vein is too complex for unit tests; requires integration tests)
