[package]
name = "vein"
version = "0.1.0"
edition = "2024"
license = "LGPL-3.0-or-later"

# ==================================================================================
# THE VEIN HANDLER
# The AI Cortex. The Mind.
# Integrates LLM reasoning, Context Retrieval, and Semantic Memory.
# ==================================================================================

[features]
default = []

[dependencies]
# The Trinity
bandy = { path = "../../libs/bandy" }
gneiss_pal = { path = "../../libs/gneiss_pal" }
unafs = { path = "../../libs/unafs" }
elessar = { path = "../../libs/elessar" }
quartzite = { path = "../../libs/quartzite" }
matrix = { path = "../../handlers/matrix" }
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"

# Async & Runtime
tokio = { version = "1.49", features = ["full"] }
# The universal nervous system. No UI dependencies allowed here.
async-channel = "2.5"
futures = "0.3"

# Networking & AI
reqwest = { version = "0.13.2", features = ["json", "multipart", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
log = "0.4"
chrono = "0.4"
anyhow = "1.0"
rand = "0.10"

[dev-dependencies]
# None (Vein is too complex for unit tests; requires integration tests)
