[package]
name = "bandy"
version = "0.1.0"
edition = "2024"
license = "LGPL-3.0-or-later"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# THE FIX: Ignite the 'std' feature so we can allocate the logger on the heap.
log = { version = "0.4", features = ["std"] }
chrono = "0.4"
anyhow = "1.0.102"
tokio = { version = "1.49", features = ["sync", "rt", "macros"] }
async-channel = "2.5.0"
