[package]
name = "gneiss_pal"
version = "0.1.0"
edition = "2021"

[features]
default = ["universal"]
gnome = ["dep:libadwaita"]
universal = []

[dependencies]
ab_glyph = "0.2.23"
raw-window-handle = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
log = "0.4"
gtk4 = { version = "0.9.7", features = ["v4_12"] }
glib = "0.20"
libadwaita = { version = "0.7.2", features = ["v1_4"], optional = true }
sourceview5 = "0.9"
async-channel = "2.3"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = ["NSApplication", "NSWindow", "NSView", "NSColor", "NSMenu", "NSMenuItem", "NSEvent", "NSResponder", "NSGraphicsContext", "NSImage", "NSBitmapImageRep"] }
objc2-foundation = { version = "0.2", features = ["NSNotification", "NSString", "NSValue", "NSGeometry", "NSDate"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
] }
