[package]
name = "gneiss_pal"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
directories = "5.0"
reqwest = { version = "0.11", features = ["json", "stream", "multipart"] }
octocrab = "0.38"
chrono = "0.4"
# No UI dependencies. Headless Logic Kernel.
