[package]
name = "gneiss_pal"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
directories = "6.0"
reqwest = { version = "0.13", features = ["json", "stream", "multipart"] }
octocrab = "0.49"
chrono = "0.4"
# No UI dependencies. Headless Logic Kernel.
