[package]
name = "quartzite"
version = "0.1.0"
edition = "2024"

[features]
default = []
gtk = []
gnome = ["dep:libadwaita"]

[dependencies]
gneiss_pal = { path = "../gneiss_pal" }
async-channel = "2.5"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ab_glyph = "0.2.32"

# ------------------------------------------------------------------------------
# LINUX / GTK4 TARGETS
# ------------------------------------------------------------------------------
# 🦅 MACH'S BRIDGE:
# We strictly gate all host-native UI libraries.
# If the target OS is "none" (our UEFI/Kernel), Cargo will completely ignore these.
[target.'cfg(all(not(target_os = "macos"), not(target_os = "none")))'.dependencies]
gtk4 = { version = "0.10.3", features = ["v4_12"] }
glib = "0.21"
glib-sys = "0.21"
gobject-sys = "0.21"
libadwaita = { version = "0.8.1", features = ["v1_4"], optional = true }
sourceview5 = "0.10"

# ------------------------------------------------------------------------------
# macOS / APP KIT TARGETS
# ------------------------------------------------------------------------------
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5.2"
objc2-foundation = { version = "0.2.2", features = ["NSThread", "NSString", "NSBundle", "NSObject"] }
objc2-app-kit = { version = "0.2.2", features = [
    "NSApplication",
    "NSView",
    "NSWindow",
    "NSResponder",
    "NSRunningApplication"
] }
block2 = "0.5"

[build-dependencies]
glib-build-tools = "0.21"
