[package]
name = "quartzite"
version = "0.1.0"
edition = "2024"
license = "LGPL-3.0-or-later"

[features]
default = []
gtk = ["dep:gtk4", "dep:glib", "dep:glib-sys", "dep:gobject-sys", "dep:sourceview5", "dep:libspelling", "dep:glib-build-tools"]
gnome = ["dep:libadwaita", "gtk"]
qt = [] # Reserves the Qt embassy feature flag for future *nix expansion

[dependencies]
gneiss_pal = { path = "../gneiss_pal" }
bandy = { path = "../bandy" }
async-channel = "2.5"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ab_glyph = "0.2.32"
chrono = "0.4"

# ------------------------------------------------------------------------------
# LINUX / GTK4 TARGETS
# ------------------------------------------------------------------------------
[target.'cfg(target_os = "linux")'.dependencies]
gtk4 = { version = "0.10.3", features = ["v4_14"], optional = true }
glib = { version = "0.21", optional = true }
glib-sys = { version = "0.22", optional = true }
gobject-sys = { version = "0.22", optional = true }
libadwaita = { version = "0.8.1", features = ["v1_4"], optional = true }
sourceview5 = { version = "0.10.0", optional = true }
libspelling = { version = "0.4.1", optional = true }

# ------------------------------------------------------------------------------
# macOS / APP KIT TARGETS
# ------------------------------------------------------------------------------
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-foundation = { version = "0.3.2", features = ["NSThread", "NSString", "NSBundle", "NSObject"] }
objc2-app-kit = { version = "0.3.2", features = [
    "NSApplication",
    "NSView",
    "NSWindow",
    "NSResponder",
    "NSRunningApplication",
    "NSSplitView",
    "NSToolbar",
    "NSVisualEffectView",
    "NSScrollView",
    "NSTextView",
    "NSColor"
] }
block2 = "0.6.2"

[target.'cfg(target_os = "linux")'.build-dependencies]
glib-build-tools = { version = "0.22", optional = true }
