[package]
name = "sentinel"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sentinel"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
regex = "1.12"
colored = "3.1"
directories = "6.0"
ignore = "0.4"
rayon = "1.11"
blake3 = { version = "1.8", features = ["rayon", "mmap"] }

# Internal Trinity
elessar = { path = "../../../libs/elessar" }
unafs = { path = "../../../libs/unafs" }
gneiss_pal = { path = "../../../libs/gneiss_pal" }
