[package]
name = "unafs-cli"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[[bin]]
name = "unafs"
path = "src/main.rs"

[dependencies]
# The Core Logic
unafs = { path = "../../../libs/unafs" }
bandy = { path = "../../../libs/bandy" }

# CLI Utilities
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1.49", features = ["full"] }
