[package]
name = "gneiss_demo_gtk"
version = "0.1.0"
edition = "2024"

[dependencies]
gneiss_pal = { path = "../../core" }
pvp_core = { path = "../../../src/core" }
gtk4 = { version = "0.9.5", features = ["v4_12"] }
libadwaita = "0.7.1"
gl_loader = "0.1.2"
gdk4 = "0.9.6"
glib = "0.20.12"
libmpv-sys = "3.1.0"
once_cell = "1.18"
